--- a/.env
+++ b/.env
@@ -4,7 +4,4 @@
 PORT=3001
 
 # Backend server URL (change this to your actual backend server)
-BACKEND_URL=http://localhost:8080
-
-# For production, you might want to set:
-# BACKEND_URL=https://your-backend-api.com
+BACKEND_URL=http://0.0.0.0:8080
