Add .env.example and add backend_url to .env

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@
 # Port for the Express server
 PORT=3001
 
-# Backend server URL
+# Backend server URL (change this to your actual backend server)
 BACKEND_URL=http://localhost:8080
